--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>ProgettoFinaleFabioGiusti</title>
+  <title>ProgettoFinale</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    body {
+      background-image: url('https://media2.giphy.com/media/BHNfhgU63qrks/giphy.gif?cid=790b7611dac569d95aaf4d31cd1166bfa65749eb8a44978e&rid=giphy.gif&ct=g');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style> 
 </head>
 <body>
   <app-root></app-root>
